--- a/gb/22/4/3/n13693284.md
+++ b/gb/22/4/3/n13693284.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>4月15日 南半球首个霸王龙骨架亮相奥克兰</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/04/id13711944-31464372933_a3ed767db9_o-600x400.jpg" />
-<h6>2016年11月6日，美国芝加哥一家博物馆展出的霸王龙骨架。（公有领域）
-</h6>
+<h6>2016年11月6日，美国芝加哥一家博物馆展出的霸王龙骨架。（公有领域）</h6>
 <hr>
 <p>【大纪元2022年04月04日讯】<span style="font-weight: 400;">（大纪元记者刘淇晴新西兰编译报导）4月2日，奥克兰战争纪念博物馆宣布了一条重大消息：世界上最稀有、保存最完整的霸王龙骨架之一，本月将首次来南半球展出。</span></p>
 <p><span style="font-weight: 400;">此骨架的霸王龙名叫Peter，是一</span><span style="font-weight: 400;">只</span><span style="font-weight: 400;">成年霸王龙，高4米，长12米，呈狩猎姿势，四年前发现于美国的怀俄明州，距今约有6700万年。</span></p>
@@ -16,39 +15,38 @@
 <p><span style="font-weight: 400;">策展人希望大量游客可重返博物馆参观。</span></p>
 <p>责任编辑：蓝克</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/5/n12792057.md#1">世卫调查不透明 全球26专家吁重查病毒起源</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/13/n12808991.md#1">【疫情3.13】美开始发放1400美元纾困金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/17/n12816424.md#1">第36届美洲杯帆船赛 新西兰酋长队蝉联冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/3/20/n12824147.md#1">新西兰施工队意外挖出已灭绝的恐鸟骨骼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/4/27/n12907909.md#1">纽各地重启澳新军团日黎明仪式纪念活动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/1/n13201475.md#1">关于3级警报规则 以下11条你需要知道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/28/n13265960.md#1">【疫情9.28】纽约州长宣布进入紧急状态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/4/n13279725.md#1">4日新增29例 总理宣布奥克兰三段路线图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/6/n13285371.md#1">全新展览将把梵蒂冈教堂名画带至奥克兰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/18/n13311988.md#1">【疫情10.18】波音员工抗议公司强制打疫苗</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/30/n10752312.md#1" target="_blank">谭松：一个被摧折了“阳根”的老地主</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539802.md#1">为了一个女子 两家人欢喜废婚约另结亲家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548117.md#1">【未解之谜】语出惊人 算尽风云 民国第一神算传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548905.md#1">【唐青看时事】美参院出大招 拟中俄“一锅端”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548224.md#1">【马克时空】台湾规划大量采购M109A7自走炮</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546781.md#1">中共专家又出损招：不生孩子就少发养老金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547362.md#1">全红婵给受伤奥运冠军留言 引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546783.md#1">稀土磁铁出口暴跌75%?中国制造商陷困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546493.md#1">哈佛认证！5种天然“快乐果”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/4/3/n13693284.htm">4月15日 南半球首个霸王龙骨架亮相奥克兰</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/4/3/n13693284.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
